--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.furiouskitten.amiel.gotalk">
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
             android:allowBackup="true"
@@ -8,12 +10,12 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".CreateUserActivity">
+        <activity android:name=".controller.CreateUserActivity">
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".controller.LoginActivity">
         </activity>
         <activity
-                android:name=".MainActivity"
+                android:name=".controller.MainActivity"
                 android:label="@string/title_activity_main"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity">
+        <activity android:name=".controller.Main2Activity">
         </activity>
     </application>
 
